Fix Phase 5 model system: Yarn/Java17 compatibility
- ModelManager: add boolean arg to TextureUtils.mipColours()
- SoftwareModelTextureBakery: fix renderFluid() 5-arg signature (1.20.1)
- SoftwareRasterizer: Math.clamp → Math.max/min (Java 17)
- ModelStore: .maxMipLevel → options.getMipmapLevels().getValue()
- ModelFactory: StairBlock→StairsBlock, createLegacyBlock→getBlockState,
  skipRendering→isSideInvisible, BlockPos.ZERO→ORIGIN, add RenderLayer import
- RenderResourceReuse: removeFirst()→remove(0) (Java 17)
- GlTexture: add name(), zero() methods
- Mapper: add getBlockStateCount()
- IdNotYetComputedException: add 2-arg constructor
- voxy.accesswidener: add StairsBlock.baseBlockState

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>